🔨 fix spacing/ scrolling

--- a/hw01/main.css
+++ b/hw01/main.css
@@ -5,12 +5,13 @@ body {
 #content {
 	width: 320px;
 	margin: 10px auto;
+	overflow-x: hidden;
 }
 
 #face {
 	width: 300px;
 	height: 300px;
-	margin: 90px auto 10px;
+	margin: 30px auto 10px;
 	background: url(images/juggleicon.png);
 }
 
@@ -36,6 +37,7 @@ body {
 	color: #FA915A;
 	outline: none;
 	border: none;
+	width: 200px;
 }
 
 @media only screen and (orientation:portrait) {
@@ -67,7 +69,7 @@ body {
 	}
 	#face {
 	  margin: 30px auto 10px;
-	  height: 220px;
+	  height: 150px;
 	  background: url(images/juggleicon2.svg) no-repeat;
 	}
 	#output:after {
